# exodusII-utils

./: CMakeLists.txt  CMakePresets.json
cmake/: exodusII-utils-config.cmake
common/: common.h
exo-info/: CMakeLists.txt  main.cpp
exo-join/: CMakeLists.txt  main.cpp
